add JMM volatile study, lambda expression study and Stream basic which is used for replace for loop